--- a/index.html
+++ b/index.html
@@ -232,6 +232,83 @@
 					</div>
 				</div>
 			</section>
+			<section id="ubicacion">
+				<div style="width: 100%" class="map">
+					<div class="map-details">
+						<div class="clock">
+							<i class="fa-regular fa-clock"></i>
+							<span>
+								Domingo a Jueves de 10 a 00 hs. Viernes y Sabado de 10 a 1 hs.
+							</span>
+						</div>
+						<div class="delivery">
+							<i class="fa-solid fa-truck"></i>
+							<span>Envíos a domicilio sin cargo de 12 a 23:45 hs. </span>
+						</div>
+						<div class="minimun">
+							<i class="fa-solid fa-ice-cream"></i>
+							<span>Envio mínimo: 1/2 kg</span>
+						</div>
+					</div>
+
+					<iframe
+						width="100%"
+						height="500"
+						frameborder="0"
+						scrolling="no"
+						marginheight="0"
+						marginwidth="0"
+						src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Av.%20Almte.%20Brown%201633,%20Y4607%20San%20Salvador%20de%20Jujuy,%20Jujuy,%20Argentina+(Helader%C3%ADa%20Mercurio)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+						><a href="https://www.gps.ie/sport-gps/">bike gps</a></iframe
+					>
+				</div>
+			</section>
+			<section id="contacto">
+				<h2>Contactanos</h2>
+				<form>
+					<div class="datospersonales">
+						<input type="text" id="nombre" placeholder="Nombre" />
+						<input type="email" id="email" placeholder="Mail" />
+						<input type="number" id="telefono" placeholder="Teléfono" />
+					</div>
+					<div class="consulta">
+						<textarea
+							id="textarea"
+							cols="50"
+							rows="4"
+							placeholder="Tu consulta"
+						></textarea>
+						<input type="submit" Enviar />
+					</div>
+				</form>
+				<div class="contacto-alternativo">
+					<div class="redes-sociales">
+						<h3>Sino también puedes encontrarnos en 👇</h3>
+						<a href="https://www.facebook.com" target="_blank"
+							><i class="fa-brands fa-facebook"></i> Facebook</a
+						>
+						<a href="https://www.twitter.com" target="_blank"
+							><i class="fa-brands fa-twitter"></i> Twitter</a
+						>
+						<span><i class="fa-solid fa-phone"></i> 4245562</span>
+						<span><i class="fa-brands fa-whatsapp"></i> 388-4449533</span>
+					</div>
+					<div class="instagram">
+						<h3>O seguirnos en Instagram</h3>
+						<a href="https://www.instagram.com" target="_blank"
+							><i class="fa-brands fa-instagram"></i> HeladeriaMercurio</a
+						>
+						<div class="galeria-insta">
+							<div class="galeria-items g-item-1"></div>
+							<div class="galeria-items g-item-2"></div>
+							<div class="galeria-items g-item-3"></div>
+							<div class="galeria-items g-item-4"></div>
+							<div class="galeria-items g-item-5"></div>
+							<div class="galeria-items g-item-6"></div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 
 		<footer></footer>
