--- a/index.html
+++ b/index.html
@@ -311,6 +311,13 @@
 			</section>
 		</main>
 
-		<footer></footer>
+		<footer>
+			<div class="footer-links">
+				<a href="#">Términos de Uso</a>
+				<a href="#">Trabajá con Nosotros</a>
+				<a href="#">Soporte</a>
+			</div>
+			<p>Hecho con 🍦 para <span>NUCBA</span></p>
+		</footer>
 	</body>
 </html>
