--- a/login.html
+++ b/login.html
@@ -4,9 +4,31 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./assets/login-style.css" />
 		<title>Accede a tu cuenta</title>
 	</head>
 	<body>
-		<main></main>
+		<header>
+			<div class="logo">
+				<a href="./index.html">
+					<img src="./assets/images/logo.png" alt="logo" /> Heladeria
+					Mercurio</a
+				>
+			</div>
+			<span
+				>Si todavía no tenes cuenta podes
+				<a href="./register.html">registrarte aquí</a>.
+			</span>
+		</header>
+		<main>
+			<form>
+				<h2>Accede a tu cuenta.</h2>
+				<span></span>
+				<input type="text" placeholder="Ingresa tu nombre de usuario" />
+				<input type="password" placeholder="Ingresa tu contraseña" />
+				<span></span>
+				<input type="submit" Acceder class="submit" />
+			</form>
+		</main>
 	</body>
 </html>
