--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./assets/style.css" />
 		<link rel="stylesheet" href="./assets/mediaqueries.css" />
+		<link rel="stylesheet" href="./assets/animaciones.css" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -24,6 +25,10 @@
 				>
 			</div>
 			<nav>
+				<label for="menu-toggle" class="menu-label">
+					<img src="./assets/images/menu.png" class="menu-icon" />
+				</label>
+				<input type="checkbox" id="menu-toggle" />
 				<ul class="navbar-list">
 					<li><a href="login.html">Iniciar Sesión</a></li>
 					<li><a href="register.html">Registrarme</a></li>
@@ -60,12 +65,12 @@
 							experiencia en el rubro de los helados. Desde entonces, nos
 							dedicamos a explorar nuevos horizontes gustativos para brindar a
 							nuestros clientes de los mejores y más frescos sabores. Buscar
-							mantener el ambiente familiar y casual que solo una heladeria de
+							mantener el ambiente familiar y casual que solo una heladería de
 							barrio puede ofrecer, pero manteniendo la calidad y la seriedad de
 							una empresa gastronómica de renombre. Cada día seleccionamos los
-							mejores ingredientes de proveedres locales y extrajeros. También
-							trabajams en equipo para tocar positivamente la vida de nustros
-							compañeros y clientes con procesos seguros, excelene servicio y
+							mejores ingredientes de proveedores locales y extranjeros. También
+							trabajamos en equipo para tocar positívamente la vida de nuestros
+							compañeros y clientes con procesos seguros, excelente servicio y
 							pasión por los helados. Nos mueve aprender, enseñar y descubrir
 							para crecer. Además, siempre buscamos mantener la buena onda y el
 							buen humor con nuestras públicaciones.
