--- a/register.html
+++ b/register.html
@@ -4,9 +4,30 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./assets/register-style.css" />
 		<title>Registrate</title>
 	</head>
 	<body>
-		<main></main>
+		<header>
+			<div class="logo">
+				<a href="./index.html">
+					<img src="./assets/images/logo.png" alt="logo" /> Heladeria
+					Mercurio</a
+				>
+			</div>
+			<span>Si ya tenes cuenta <a href="./login.html">ingresa aquí</a>. </span>
+		</header>
+		<main>
+			<form class="login register">
+				<h2>Registra tu cuenta.</h2>
+				<span></span>
+				<input type="text" placeholder="Ingresa tu nombre de usuario" />
+				<input type="email" placeholder="Ingresa tu correo electrónico" />
+				<input type="password" placeholder="Ingresa tu contraseña" />
+				<input type="password" placeholder="Repite la contraseña" />
+				<span></span>
+				<input type="submit" Acceder class="submit" />
+			</form>
+		</main>
 	</body>
 </html>
