--- a/login.html
+++ b/login.html
@@ -11,8 +11,8 @@
 		<header>
 			<div class="logo">
 				<a href="./index.html">
-					<img src="./assets/images/logo.png" alt="logo" /> Heladeria
-					Mercurio</a
+					<img src="./assets/images/logo.png" alt="logo" />
+					<span>Heladeria Mercurio</span></a
 				>
 			</div>
 			<span
