--- a/register.html
+++ b/register.html
@@ -11,9 +11,9 @@
 		<header>
 			<div class="logo">
 				<a href="./index.html">
-					<img src="./assets/images/logo.png" alt="logo" /> Heladeria
-					Mercurio</a
-				>
+					<img src="./assets/images/logo.png" alt="logo" />
+					<span>Heladeria Mercurio</span>
+				</a>
 			</div>
 			<span>Si ya tenes cuenta <a href="./login.html">ingresa aquí</a>. </span>
 		</header>
